# graph-family-tree

./: .gitignore  README.md
backend/: auth.py  cleanup_debug.py  database.py  debug_db.py  debug_graph.py  kuzu_db  kuzu_db.wal  main.py  migrate.py  migrate_adoption.py  migrate_dates.py  migrate_maiden_name.py  models.py  pyproject.toml  schema.py  test_schema.py
backend/routers/: auth.py  events.py  media.py  occupations.py  organizations.py  people.py  places.py  relationships.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/features/events/: EventsPage.tsx
frontend/src/features/people/: OccupationsSection.tsx  PeopleListPage.tsx  PersonFormModal.tsx  PersonProfile.tsx  RelationshipEditModal.tsx
frontend/src/features/places/: PlacesPage.tsx
frontend/src/features/tree/: FamilyGraph.tsx
